Refactor task scheduling to use FoliaScheduler
- Updated SaveDataTask and UpkeepWarningTask to implement Runnable instead of extending BukkitRunnable.
- Replaced Bukkit's task scheduling methods with Folia's asynchronous scheduling methods.
- Refactored InventoryController and InventoryDrawer to utilize FoliaScheduler for task execution.
- Enhanced ChatUtils to support legacy component serialization and color handling.
- Introduced LegacyColor utility for color code management.
- Added conversation framework with ConversationContext, Prompt, and MessagePrompt classes.
- Implemented ConversationListener to handle player input during conversations.
- Updated plugin.yml to reflect API version and Folia support.